Mon Sep 20 00:13:48 2004  Matthias Clasen  <maclas@gmx.de>

	Make GOption remove long options completely. (#153113, Robert Ögren)

	* glib/goption.c (parse_long_option): Fix a wrong index.

	* tests/option-test.c (ignore_test3): Test handling of unknown
	options some more.

Sun Sep 19 23:56:15 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/goption.c (g_option_context_parse): Call error_func
	on error, not post_parse_func again.  (#153107, Robert Ögren)

Sun Sep 19 23:52:35 2004  Matthias Clasen  <maclas@gmx.de>

	* glib/gmessages.c (mklevel_prefix): 
	* glib/gmessages.c (g_logv): Fix the types of some variables
	to be GLogLevelFlags instead of guint.  (#153042, Philippe Blain)

2004-09-18  Matthias Clasen  <mclasen@redhat.com>

	* Version bump

	* === Released 2.5.3 ===

2004-09-17  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: More updates.

Thu Sep 16 18:42:46 2004  Manish Singh  <yosh@gimp.org>

	* glib/abicheck.sh: don't hardcode lengths for cut, instead split on
	the third field.

Thu Sep 16 18:15:32 2004  Manish Singh  <yosh@gimp.org>

	* glib/gstrfuncs.c (g_strncasecmp): Make it take a guint for number
	of characters, instead of a gsize. Technically this is incorrect,
	but this makes it match the prototype, and this is a deprecated
	function anyway.

2004-09-16  Matthias Clasen  <mclasen@redhat.com>

	* glib/Makefile.am (EXTRA_DIST): Add abicheck.sh

Thu Sep 16 02:03:15 2004  Matthias Clasen  <maclas@gmx.de>

	Implement the same PLT reduction technique used in GTK+:
	
	* glib/glib.symbols: Master list of symbols

	* glib/makegalias.pl: Perl script which creates galias.h

	* glib/abicheck.sh: Compares actual exports against glib.symbols 

	* glib/glib.def: Removed. This file is now generated from
	glib.symbols
	
	* glib/Makefile.am: Add rules to generate galias.h and glib.def,
	and add abicheck.sh to TESTS. Don't export _-prefixed symbols.
	
	* configure.in: Add --disable-visibility to suppress the 
	use of ELF visibility attributes.
